--- a/SortAPI/src/client/Makefile
+++ b/SortAPI/src/client/Makefile
@@ -4,4 +4,4 @@
 GCC = g++
 
 .cpp:
-	$(GCC) -std=c++14 -O2 -Wall -Wextra -pedantic -Wshadow -Wformat=2 -Wfloat-equal -Wconversion -Wlogical-op -Wno-unused-result $< -o $@ -lboost_system -lcrypto -lssl -lcpprest
+	$(GCC) -std=c++11 $< -o $@ -lcpprest -lssl -lcrypto -lboost_system  
