--- a/SortAPI/WebContent/WEB-INF/web.xml
+++ b/SortAPI/WebContent/WEB-INF/web.xml
@@ -4,17 +4,33 @@
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
+    <servlet>
+        <servlet-name>Jersey2Config</servlet-name>
+        <servlet-class>io.swagger.jersey.config.JerseyJaxrsConfig</servlet-class>
+        <init-param>
+            <param-name>api.version</param-name>
+            <param-value>1.0.0</param-value>
+        </init-param>
+        <init-param>
+            <param-name>swagger.api.basepath</param-name>
+            <param-value>http://localhost:8080/SortAPI/api</param-value>
+        </init-param>
+        <load-on-startup>2</load-on-startup>
+    </servlet>
   <servlet>
   	<servlet-name>Api</servlet-name>
   	<servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
   	<init-param>
   		<param-name>jersey.config.server.provider.packages</param-name>
-  		<param-value>service</param-value>
+  		<param-value>
+           io.swagger.jaxrs.listing, service
+        </param-value>
   	</init-param>
   	<load-on-startup>1</load-on-startup>
   </servlet>
-  	<servlet-mapping>
+    <servlet-mapping>
   		<servlet-name>Api</servlet-name>
   		<url-pattern>/*</url-pattern>
   	</servlet-mapping>
+
 </web-app>
