--- a/SortAPI/.classpath
+++ b/SortAPI/.classpath
@@ -4,6 +4,81 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="lib" path="activation.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/annotations-2.0.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/aopalliance-repackaged-2.5.0-b42.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/asm-all-repackaged-2.2.0-b10.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/cdi-api-1.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/cglib-2.2.0-b10.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/el-api-2.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/guava-15.0.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/hk2-api-2.2.0-b10.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/hk2-api-2.5.0-b42.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/hk2-locator-2.2.0-b10.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/hk2-locator-2.5.0-b42.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/hk2-utils-2.2.0-b10.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/hk2-utils-2.5.0-b42.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jackson-annotations-2.4.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jackson-core-2.4.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jackson-databind-2.4.1.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jackson-jaxrs-base-2.4.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jackson-jaxrs-json-provider-2.4.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jackson-module-jaxb-annotations-2.4.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jackson-module-jsonSchema-2.4.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jackson-module-scala_2.10-2.4.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/javassist-3.18.2-GA.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/javassist-3.22.0-CR2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/javax.annotation-api-1.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/javax.inject-1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/javax.inject-2.2.0-b10.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/javax.inject-2.5.0-b42.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/javax.json-1.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/javax.json-api-1.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/javax.json.bind-api-1.0.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/javax.servlet-api-3.0.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/javax.ws.rs-api-2.0.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/javax.ws.rs-api-2.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jaxb-api-2.2.7.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jboss-interceptors-api_1.1_spec-1.0.0.Beta1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jersey-client-2.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jersey-client.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jersey-common-2.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jersey-common.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jersey-container-servlet-core-2.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jersey-container-servlet-core.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jersey-container-servlet.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jersey-hk2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jersey-media-jaxb.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jersey-media-json-binding.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jersey-media-multipart-2.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jersey-media-sse.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jersey-server-2.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jersey-server.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/joda-convert-1.6.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/joda-time-2.3.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/json4s-ast_2.10-3.2.11.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/json4s-core_2.10-3.2.11.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/json4s-ext_2.10-3.2.11.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/json4s-jackson_2.10-3.2.11.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/json4s-native_2.10-3.2.11.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jsr250-api-1.0.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jsr305-2.0.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/mimepull-1.8.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/org.osgi.core-4.2.0.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/osgi-resource-locator-1.0.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/paranamer-2.6.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/persistence-api-1.0.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/reflections-0.9.9.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/scala-compiler-2.10.0.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/scala-library-2.10.4.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/scala-reflect-2.10.4.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/scalap-2.10.0.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/slf4j-api-1.6.3.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/swagger-annotations-1.3.13.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/swagger-core_2.10-1.3.13.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/swagger-jaxrs_2.10-1.3.13.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/swagger-jersey2-jaxrs_2.10-1.3.13.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/validation-api-1.1.0.Final.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/yasson-1.0.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
 			<attribute name="module" value="true"/>
@@ -11,5 +86,37 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="javafx-base-11-ea+23-linux.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/activation.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/aopalliance-repackaged-2.5.0-b32.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-lang3-3.2.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/guava-20.0.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/hk2-api-2.5.0-b32.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/hk2-locator-2.5.0-b32.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/hk2-utils-2.5.0-b32.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jackson-annotations-2.9.5.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jackson-core-2.9.5.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jackson-databind-2.9.5.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jackson-dataformat-yaml-2.9.5.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/javafx-base-11-linux.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/javassist-3.21.0-GA.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/javax.inject-2.5.0-b32.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/javax.ws.rs-api-2.0.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jersey-client-2.25.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jersey-common-2.25.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jersey-container-servlet-core-2.25.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jersey-guava-2.25.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jersey-media-jaxb-2.25.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jersey-media-multipart-2.25.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jersey-server-2.25.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/mimepull-1.9.6.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/reflections-0.9.11.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/slf4j-api-1.7.22.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/snakeyaml-1.18.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/swagger-annotations-1.5.21.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/swagger-core-1.5.21.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/swagger-jaxrs-1.5.21.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/swagger-jersey2-jaxrs-1.5.21.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/swagger-models-1.5.21.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
